hphp/hack/test/typecheck/evade_enum_exhaustivity.php.exp
ERROR: File "evade_enum_exhaustivity.php", line 14, characters 3-47:
This `switch` statement is nonexhaustive. At least the following cases are missing: `E::B` (Typing[4019])
  File "evade_enum_exhaustivity.php", line 14, characters 11-12:
  The scrutinee has type `E`.
